added feed, profile and home fragments

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <!-- Paste BOTH strings as required -->
     <string name="back4app_app_id">ZFoQfE82MAnhhXxtfEtbmejJSm3GYg02cVnlKJAM</string>
     <string name="back4app_client_key">DFf4Ywtr77InAGsmyVIcO51NkecCrgaN98458kFb</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
